Fix date getting wrapped under Review section on user profile
For the mobile screens

--- a/src/views/User/User.css
+++ b/src/views/User/User.css
@@ -190,6 +190,7 @@
         width: 7em;
         text-align: left;
         padding-right: 0.5em;
+        white-space: nowrap;
     }
 
     td.banned,
